# semops-core

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  start.sh  start_services.py
api/: mcp_server.py  query.py
config/mappings/: concept-pattern-map.yaml
config/sources/: docs-pr.yaml  dx-hub-domain-patterns.yaml  publisher-pr.yaml
docs/: ARCHITECTURE.md  INFRASTRUCTURE.md  INGESTION_GUIDE.md  SEARCH_GUIDE.md  STRATEGIC_DDD.md  USER_GUIDE.md
docs/decisions/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004-schema-phase2-pattern-aggregate-root.md  ADR-0005-global-developer-configuration.md  (+14 more)
lineage/: LINEAGE_TRACKING.md
schemas/: GOVERNANCE_MODEL.md  README.md  SCHEMA_CHANGELOG.md  SCHEMA_REFERENCE.md  SKOS_PROVO_MAPPING.md  UBIQUITOUS_LANGUAGE.md  fitness-functions.sql  phase2-schema.sql
scripts/: README.md  aggregate_adrs.py  bridge_content_patterns.py  chunker.py  db_utils.py  detect_drift.py  docling_ingest.py  entity_builder.py  generate_concept_embeddings.py  generate_embeddings.py  generate_local_embeddings.py  github_fetcher.py  ingest_architecture.py  ingest_concepts.py  ingest_concepts_sql.py  ingest_domain_patterns.py  ingest_from_source.py  ingest_markdown_docs.py  init_schema.py  lineage_utils.py  llm_classifier.py  local_semantic_search.py  log_event.sh  manage_lineage.py  materialize_graph.py  rag_query.py  run_classifiers.py  schema_queries.py  search.py  semantic_search.py  setup_supabase.py  sheets_to_entities.py  source_config.py  start.py  sync_concepts_to_neo4j.py  sync_neo4j.py  wait_for_services.py
(+27 files in other folders)
